<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sqlitebookscrud.MainActivity"
    android:background="@android:color/holo_blue_dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/book_title"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:gravity="center" />

            <EditText
                android:id="@+id/edit_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="Enter Book Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textStyle="bold|italic" />
            <TextView
                android:text="@string/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:id="@+id/author"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:gravity="center" />
            <EditText
                android:id="@+id/edit_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="Enter Author Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
            <TextView
                android:text="@string/publication_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:id="@+id/pub_date"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:gravity="center" />
            <EditText
                android:id="@+id/edit_pub_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="Enter Publication Date"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <Button
                android:text="@string/view_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/view_book"
                android:textSize="18sp"
                android:onClick="viewBooks"
                android:textStyle="bold|italic"
               />

            <Button
                android:text="@string/add_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_book"
                android:textStyle="bold|italic"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:onClick="addBooks" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <EditText
                android:id="@+id/cbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Current Book Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
            <EditText
                android:id="@+id/nbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="New Book Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
            <Button
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update"
                android:onClick="updateBooks"
                android:layout_marginTop="15dp"
                android:textStyle="normal|bold" />


        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/del_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/delete"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:freezesText="false"
        android:hint="Enter Name to Delete Data"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:id="@+id/delete"
        android:onClick="deleteBook"
        android:textStyle="normal|bold"
        tools:ignore="RelativeOverlap"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>